service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-go-app-srv
spec:
  type: NodePort
  ports:
    - name: http
      port: 9090
      targetPort: 8080
  selector:
    app: k8s-go-app

#kubectl apply -f service.yml
#kubectl get service
#minikube service k8s-go-app-srv --url
